--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Default profile configuration
-spring.profiles.active=@spring.profiles.active@
+spring.profiles.active=dev
 
 # Database configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/rv_books
@@ -10,10 +10,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Server configuration
 server.port=8080
+server.tomcat.use-native=false
 
 # Logging configuration
 logging.level.org.springframework=INFO
