--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:dev": "env-cmd -f env/dev.env react-scripts start",
+    "start:staging": "env-cmd -f env/staging.env react-scripts start",
     "build": "react-scripts build",
+    "build:prod": "env-cmd -f env/prod.env react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -37,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "env-cmd": "^10.1.0"
   }
 }
